--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,10 @@
 <link rel="stylesheet" href="stylesheets/ijkingtoets.css">
 <link rel="stylesheet" href="stylesheets/CSE-bar.css">
 <link rel="stylesheet" href="stylesheets/future.css">
+<link rel="stylesheet" href="stylesheets/tolerateColumn.css">
+<link rel="stylesheet" href="stylesheets/failedcourses.css">
+
+
 
 <div id="student">
     <i class="fa fa-user" aria-hidden="true"></i>
@@ -1463,6 +1467,296 @@
             </div>
 
         </div>
+        <div class="flex-column colfailed">
+
+            <div class="vertical-title">Onsuccesvolle vakken</div>
+            <div class="top">
+                <div class="fa compress-colfail fa-compress"></div>
+                <div class="column-title">Onsuccesvolle vakken</div>
+                <div class="periode">Tolerantiepunten</div>
+                <div id="tolerantiepunten" class="tolerantiepunten flickering">
+                    <svg height="4px" width="120px">
+                        <rect height="4px" width="120px" style="fill:#e0e0e0 "></rect>
+                        <rect height="4px" width="120px" style="fill:#82A8B7 "></rect>
+                    </svg>
+                    <span> 12 </span><b> /12</b>
+                </div>
+            </div>
+            <div class="bottom">
+
+
+                <div class="flex-item">
+                    <div id="H01B0A_failed" class="course failed-course failed" style="border-color: failed; min-height: 50px;">
+                        <div class="course-top failed canTolerate">
+                            <div class="name">Toegepaste mechanica, deel 1</div>
+                            <div class="top-bar failed canTolerate">
+                                <div class="grade">
+                                    <div class="try notbold">NA |  </div>
+                                    <div class="try bold">&nbsp; 5</div>
+                                    <div class="getolereerd">Getolereerd</div>
+                                </div>
+
+                                <div class="credits">
+                                    5<span>stp</span>
+                                </div>
+                            </div>
+                            <paper-ripple>
+
+
+                                <div id="background" class="style-scope paper-ripple"></div>
+                                <div id="waves" class="style-scope paper-ripple"></div>
+                            </paper-ripple>
+                        </div>
+                        <div class="course-bottom tolerate failed canTolerate">
+                            <div class="options-container">
+                                <div id="stay-failed" class="tolerate-checkbox stay-failed">
+                                    <div class="checkdot check-fail">
+                                        <a class="fa fa-check"></a>
+                                    </div>
+                                    <span>Opnieuw afleggen</span>
+                                    <paper-ripple>
+
+
+                                        <div id="background" class="style-scope paper-ripple"></div>
+                                        <div id="waves" class="style-scope paper-ripple"></div>
+                                    </paper-ripple>
+                                </div>
+                                <div id="tolerate-course" class="tolerate-checkbox tolerate-course">
+                                    <div class="checkdot check-tolerate">
+                                        <a class="fa fa-check"></a>
+                                    </div>
+                                    <span>Tolereren</span>
+                                    <paper-ripple>
+
+
+                                        <div id="background" class="style-scope paper-ripple"></div>
+                                        <div id="waves" class="style-scope paper-ripple"></div>
+                                    </paper-ripple>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="courseseparator"></div>
+
+                <div class="flex-item">
+                    <div id="H01B2B_failed" class="course failed-course tolerable" style="border-color: tolerable; min-height: 50px;">
+                        <div class="course-top tolerable canTolerate">
+                            <div class="name">Algemene natuurkunde</div>
+                            <div class="top-bar tolerable canTolerate">
+                                <div class="grade">
+                                    <div class="try notbold">8 |  </div>
+                                    <div class="try bold">&nbsp; 9</div>
+                                    <div class="getolereerd">Getolereerd</div>
+                                </div>
+
+                                <div class="credits">
+                                    6<span>stp</span>
+                                </div>
+                            </div>
+                            <paper-ripple>
+
+
+                                <div id="background" class="style-scope paper-ripple"></div>
+                                <div id="waves" class="style-scope paper-ripple"></div>
+                            </paper-ripple>
+                        </div>
+                        <div class="course-bottom tolerate tolerable canTolerate">
+                            <div class="options-container">
+                                <div id="stay-failed" class="tolerate-checkbox stay-failed">
+                                    <div class="checkdot check-fail">
+                                        <a class="fa fa-check"></a>
+                                    </div>
+                                    <span>Opnieuw afleggen</span>
+                                    <paper-ripple>
+
+
+                                        <div id="background" class="style-scope paper-ripple"></div>
+                                        <div id="waves" class="style-scope paper-ripple"></div>
+                                    </paper-ripple>
+                                </div>
+                                <div id="tolerate-course" class="tolerate-checkbox tolerate-course">
+                                    <div class="checkdot check-tolerate">
+                                        <a class="fa fa-check"></a>
+                                    </div>
+                                    <span>Tolereren</span>
+                                    <paper-ripple>
+
+
+                                        <div id="background" class="style-scope paper-ripple"></div>
+                                        <div id="waves" class="style-scope paper-ripple"></div>
+                                    </paper-ripple>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex-item">
+                    <div id="H01A2A_failed" class="course failed-course failed" style="border-color: failed; min-height: 50px;">
+                        <div class="course-top failed canTolerate">
+                            <div class="name">Analyse, deel 2</div>
+                            <div class="top-bar failed canTolerate">
+                                <div class="grade">
+                                    <div class="try notbold">NA |  </div>
+                                    <div class="try bold">&nbsp; 5</div>
+                                    <div class="getolereerd">Getolereerd</div>
+                                </div>
+
+                                <div class="credits">
+                                    5<span>stp</span>
+                                </div>
+                            </div>
+                            <paper-ripple>
+
+
+                                <div id="background" class="style-scope paper-ripple"></div>
+                                <div id="waves" class="style-scope paper-ripple"></div>
+                            </paper-ripple>
+                        </div>
+                        <div class="course-bottom tolerate failed canTolerate">
+                            <div class="options-container">
+                                <div id="stay-failed" class="tolerate-checkbox stay-failed">
+                                    <div class="checkdot check-fail">
+                                        <a class="fa fa-check"></a>
+                                    </div>
+                                    <span>Opnieuw afleggen</span>
+                                    <paper-ripple>
+
+
+                                        <div id="background" class="style-scope paper-ripple"></div>
+                                        <div id="waves" class="style-scope paper-ripple"></div>
+                                    </paper-ripple>
+                                </div>
+                                <div id="tolerate-course" class="tolerate-checkbox tolerate-course">
+                                    <div class="checkdot check-tolerate">
+                                        <a class="fa fa-check"></a>
+                                    </div>
+                                    <span>Tolereren</span>
+                                    <paper-ripple>
+
+
+                                        <div id="background" class="style-scope paper-ripple"></div>
+                                        <div id="waves" class="style-scope paper-ripple"></div>
+                                    </paper-ripple>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex-item">
+                    <div id="H01Z2A_failed" class="course failed-course tolerable" style="border-color: tolerable; min-height: 50px;">
+                        <div class="course-top tolerable canTolerate">
+                            <div class="name">Elektrische netwerken</div>
+                            <div class="top-bar tolerable canTolerate">
+                                <div class="grade">
+                                    <div class="try bold">9 |  </div>
+                                    <div class="try notbold">&nbsp; 8</div>
+                                    <div class="getolereerd">Getolereerd</div>
+                                </div>
+
+                                <div class="credits">
+                                    3<span>stp</span>
+                                </div>
+                            </div>
+                            <paper-ripple>
+
+
+                                <div id="background" class="style-scope paper-ripple"></div>
+                                <div id="waves" class="style-scope paper-ripple"></div>
+                            </paper-ripple>
+                        </div>
+                        <div class="course-bottom tolerate tolerable canTolerate">
+                            <div class="options-container">
+                                <div id="stay-failed" class="tolerate-checkbox stay-failed">
+                                    <div class="checkdot check-fail">
+                                        <a class="fa fa-check"></a>
+                                    </div>
+                                    <span>Opnieuw afleggen</span>
+                                    <paper-ripple>
+
+
+                                        <div id="background" class="style-scope paper-ripple"></div>
+                                        <div id="waves" class="style-scope paper-ripple"></div>
+                                    </paper-ripple>
+                                </div>
+                                <div id="tolerate-course" class="tolerate-checkbox tolerate-course">
+                                    <div class="checkdot check-tolerate">
+                                        <a class="fa fa-check"></a>
+                                    </div>
+                                    <span>Tolereren</span>
+                                    <paper-ripple>
+
+
+                                        <div id="background" class="style-scope paper-ripple"></div>
+                                        <div id="waves" class="style-scope paper-ripple"></div>
+                                    </paper-ripple>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex-item">
+                    <div id="H01B4B_failed" class="course failed-course failed" style="border-color: failed; min-height: 50px;">
+                        <div class="course-top failed canTolerate">
+                            <div class="name">Thermodynamica</div>
+                            <div class="top-bar failed canTolerate">
+                                <div class="grade">
+                                    <div class="try notbold">NA |  </div>
+                                    <div class="try bold">&nbsp; 3</div>
+                                    <div class="getolereerd">Getolereerd</div>
+                                </div>
+
+                                <div class="credits">
+                                    4<span>stp</span>
+                                </div>
+                            </div>
+                            <paper-ripple>
+
+
+                                <div id="background" class="style-scope paper-ripple"></div>
+                                <div id="waves" class="style-scope paper-ripple"></div>
+                            </paper-ripple>
+                        </div>
+                        <div class="course-bottom tolerate failed canTolerate">
+                            <div class="options-container">
+                                <div id="stay-failed" class="tolerate-checkbox stay-failed">
+                                    <div class="checkdot check-fail">
+                                        <a class="fa fa-check"></a>
+                                    </div>
+                                    <span>Opnieuw afleggen</span>
+                                    <paper-ripple>
+
+
+                                        <div id="background" class="style-scope paper-ripple"></div>
+                                        <div id="waves" class="style-scope paper-ripple"></div>
+                                    </paper-ripple>
+                                </div>
+                                <div id="tolerate-course" class="tolerate-checkbox tolerate-course">
+                                    <div class="checkdot check-tolerate">
+                                        <a class="fa fa-check"></a>
+                                    </div>
+                                    <span>Tolereren</span>
+                                    <paper-ripple>
+
+
+                                        <div id="background" class="style-scope paper-ripple"></div>
+                                        <div id="waves" class="style-scope paper-ripple"></div>
+                                    </paper-ripple>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
+
         <div class="flex-column colfuture">
             <div class="vertical-title">bachelor</div>
             <div class="top">
@@ -1497,6 +1791,7 @@
             </div>
 
         </div>
+
     </div>
 </div>
 
