--- a/static/index.html
+++ b/static/index.html
@@ -1171,14 +1171,14 @@
                 <div class="periode">3e examenperiode</div>
                 <div id="CSE_sept" class="CSE flickering">
 
-                    CSE 72%
+                    CSE 62%
                     <svg height="4px" width="72px">
                         <rect height="4px" width="72px" style="fill:#e0e0e0 "></rect>
-                        <rect height="4px" width="52px" style="fill:#82A8B7 "></rect>
+                        <rect height="4px" width="45px" style="fill:#82A8B7 "></rect>
                     </svg>
 
 
-                    43<b>/60</b>
+                    37<b>/60</b>
 
                 </div>
             </div>
@@ -1312,11 +1312,11 @@
                 <div class="courseseparator"></div>
 
                 <div class="flex-item">
-                    <div id="H01B2B_3" class="course passed">
+                    <div id="H01B2B_3" class="course tolerable">
                         <div class="course-top">
                             <div class="name">Algemene natuurkunde</div>
-                            <div class="top-bar passed">
-                                <div class="grade">11</div>
+                            <div class="top-bar tolerable">
+                                <div class="grade">9</div>
                                 <div class="credits">
                                     <!-- <div class="bracket">[</div> -->
                                     6<span>stp</span>
@@ -1479,9 +1479,9 @@
                 <div id="tolerantiepunten" class="tolerantiepunten flickering">
                     <svg height="4px" width="120px">
                         <rect height="4px" width="120px" style="fill:#e0e0e0 "></rect>
-                        <rect height="4px" width="120px" style="fill:#82A8B7 "></rect>
+                        <rect id="tolerantiepuntenBar" height="4px" width="120px" style="fill:#82A8B7 "></rect>
                     </svg>
-                    <span> 12 </span><b> /12</b>
+                    <span id="tolerantiepuntenValue"> 12 </span><b> /12</b>
                 </div>
             </div>
             <div class="bottom">
@@ -1491,47 +1491,13 @@
                             <div class="name">Toegepaste mechanica, deel 1</div>
                             <div class="top-bar failed canTolerate">
                                 <div class="grade">
-                                    <div class="try notbold">NA |  </div>
-                                    <div class="try bold">&nbsp; 5</div>
+                                    <div class="try notbold">3 |  </div>
+                                    <div class="try bold">&nbsp; NA</div>
                                     <div class="getolereerd">Getolereerd</div>
                                 </div>
 
                                 <div class="credits">
                                     5<span>stp</span>
-                                </div>
-                            </div>
-                            <paper-ripple>
-
-
-                                <div id="background" class="style-scope paper-ripple"></div>
-                                <div id="waves" class="style-scope paper-ripple"></div>
-                            </paper-ripple>
-                        </div>
-                        <div class="course-bottom tolerate failed canTolerate">
-                            <div class="options-container">
-                                <div id="stay-failed" class="tolerate-checkbox stay-failed">
-                                    <div class="checkdot check-fail">
-                                        <a class="fa fa-check"></a>
-                                    </div>
-                                    <span>Opnieuw afleggen</span>
-                                    <paper-ripple>
-
-
-                                        <div id="background" class="style-scope paper-ripple"></div>
-                                        <div id="waves" class="style-scope paper-ripple"></div>
-                                    </paper-ripple>
-                                </div>
-                                <div id="tolerate-course" class="tolerate-checkbox tolerate-course">
-                                    <div class="checkdot check-tolerate">
-                                        <a class="fa fa-check"></a>
-                                    </div>
-                                    <span>Tolereren</span>
-                                    <paper-ripple>
-
-
-                                        <div id="background" class="style-scope paper-ripple"></div>
-                                        <div id="waves" class="style-scope paper-ripple"></div>
-                                    </paper-ripple>
                                 </div>
                             </div>
                         </div>
@@ -1546,7 +1512,7 @@
                             <div class="name">Algemene natuurkunde</div>
                             <div class="top-bar tolerable canTolerate">
                                 <div class="grade">
-                                    <div class="try notbold">8 |  </div>
+                                    <div class="try notbold">6 |  </div>
                                     <div class="try bold">&nbsp; 9</div>
                                     <div class="getolereerd">Getolereerd</div>
                                 </div>
@@ -1555,35 +1521,21 @@
                                     6<span>stp</span>
                                 </div>
                             </div>
-                            <paper-ripple>
-
-
-                                <div id="background" class="style-scope paper-ripple"></div>
-                                <div id="waves" class="style-scope paper-ripple"></div>
-                            </paper-ripple>
                         </div>
                         <div class="course-bottom tolerate tolerable canTolerate">
                             <div class="options-container">
-                                <div id="stay-failed" class="tolerate-checkbox stay-failed">
+                                <div id="resit_H01B2B" class="tolerate-checkbox stay-failed">
                                     <div class="checkdot check-fail">
                                         <a class="fa fa-check"></a>
                                     </div>
                                     <span>Opnieuw afleggen</span>
-                                    <paper-ripple>
-
-
-                                        <div id="background" class="style-scope paper-ripple"></div>
-                                        <div id="waves" class="style-scope paper-ripple"></div>
-                                    </paper-ripple>
                                 </div>
-                                <div id="tolerate-course" class="tolerate-checkbox tolerate-course">
+                                <div id="tolerated_H01B2B" class="tolerate-checkbox tolerate-course">
                                     <div class="checkdot check-tolerate">
                                         <a class="fa fa-check"></a>
                                     </div>
                                     <span>Tolereren</span>
                                     <paper-ripple>
-
-
                                         <div id="background" class="style-scope paper-ripple"></div>
                                         <div id="waves" class="style-scope paper-ripple"></div>
                                     </paper-ripple>
@@ -1608,12 +1560,6 @@
                                     5<span>stp</span>
                                 </div>
                             </div>
-                            <paper-ripple>
-
-
-                                <div id="background" class="style-scope paper-ripple"></div>
-                                <div id="waves" class="style-scope paper-ripple"></div>
-                            </paper-ripple>
                         </div>
                         <div class="course-bottom tolerate failed canTolerate">
                             <div class="options-container">
@@ -1647,13 +1593,13 @@
                 </div>
 
                 <div class="flex-item">
-                    <div id="H01Z2A_failed" class="course failed-course tolerable" style="border-color: tolerable; min-height: 50px;">
-                        <div class="course-top tolerable canTolerate">
-                            <div class="name">Elektrische netwerken</div>
-                            <div class="top-bar tolerable canTolerate">
+                    <div id="H0150A_failed" class="course failed-course failed" style="border-color: failed; min-height: 50px;">
+                        <div class="course-top failed canTolerate">
+                            <div class="name">Inleiding tot de materiaalkunde</div>
+                            <div class="top-bar failed canTolerate">
                                 <div class="grade">
-                                    <div class="try bold">9 |  </div>
-                                    <div class="try notbold">&nbsp; 8</div>
+                                    <div class="try notbold">6 |  </div>
+                                    <div class="try bold">&nbsp;4</div>
                                     <div class="getolereerd">Getolereerd</div>
                                 </div>
 
@@ -1661,52 +1607,18 @@
                                     3<span>stp</span>
                                 </div>
                             </div>
-                            <paper-ripple>
-
-
-                                <div id="background" class="style-scope paper-ripple"></div>
-                                <div id="waves" class="style-scope paper-ripple"></div>
-                            </paper-ripple>
-                        </div>
-                        <div class="course-bottom tolerate tolerable canTolerate">
-                            <div class="options-container">
-                                <div id="stay-failed" class="tolerate-checkbox stay-failed">
-                                    <div class="checkdot check-fail">
-                                        <a class="fa fa-check"></a>
-                                    </div>
-                                    <span>Opnieuw afleggen</span>
-                                    <paper-ripple>
-
-
-                                        <div id="background" class="style-scope paper-ripple"></div>
-                                        <div id="waves" class="style-scope paper-ripple"></div>
-                                    </paper-ripple>
-                                </div>
-                                <div id="tolerate-course" class="tolerate-checkbox tolerate-course">
-                                    <div class="checkdot check-tolerate">
-                                        <a class="fa fa-check"></a>
-                                    </div>
-                                    <span>Tolereren</span>
-                                    <paper-ripple>
-
-
-                                        <div id="background" class="style-scope paper-ripple"></div>
-                                        <div id="waves" class="style-scope paper-ripple"></div>
-                                    </paper-ripple>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="flex-item">
-                    <div id="H01B4B_failed" class="course failed-course failed" style="border-color: failed; min-height: 50px;">
-                        <div class="course-top failed canTolerate">
+                    <div id="H01B4B_failed" class="course failed-course tolerable" style="border-color: failed; min-height: 50px;">
+                        <div class="course-top tolerable canTolerate">
                             <div class="name">Thermodynamica</div>
-                            <div class="top-bar failed canTolerate">
+                            <div class="top-bar tolerable canTolerate">
                                 <div class="grade">
-                                    <div class="try notbold">NA |  </div>
-                                    <div class="try bold">&nbsp; 3</div>
+                                    <div class="try notbold">5 |  </div>
+                                    <div class="try bold">&nbsp; 8</div>
                                     <div class="getolereerd">Getolereerd</div>
                                 </div>
 
@@ -1714,28 +1626,17 @@
                                     4<span>stp</span>
                                 </div>
                             </div>
-                            <paper-ripple>
 
-
-                                <div id="background" class="style-scope paper-ripple"></div>
-                                <div id="waves" class="style-scope paper-ripple"></div>
-                            </paper-ripple>
                         </div>
                         <div class="course-bottom tolerate failed canTolerate">
                             <div class="options-container">
-                                <div id="stay-failed" class="tolerate-checkbox stay-failed">
+                                <div id="resit_H01B4B" class="tolerate-checkbox stay-failed">
                                     <div class="checkdot check-fail">
                                         <a class="fa fa-check"></a>
                                     </div>
                                     <span>Opnieuw afleggen</span>
-                                    <paper-ripple>
-
-
-                                        <div id="background" class="style-scope paper-ripple"></div>
-                                        <div id="waves" class="style-scope paper-ripple"></div>
-                                    </paper-ripple>
                                 </div>
-                                <div id="tolerate-course" class="tolerate-checkbox tolerate-course">
+                                <div id="tolerated_H01B4B" class="tolerate-checkbox tolerate-course">
                                     <div class="checkdot check-tolerate">
                                         <a class="fa fa-check"></a>
                                     </div>
@@ -1765,11 +1666,12 @@
                 <div id="bachelorCredits" class="bachelorCredits flickering">
                     <svg height="4px" width="120px">
                         <rect height="4px" width="120px" style="fill:#e0e0e0 "></rect>
-                        <rect height="4px" width="29px" style="fill:#82A8B7 "></rect>
+                        <rect height="4px" width="25px" style="fill:#82A8B7 " id="bachelorCreditsBar"></rect>
                     </svg>
-                    <span> 43 </span><b> /180</b>
+                    <span id="bachelorCreditsValue"> 37 </span><b> /180</b>
                 </div>
             </div>
+
             <div class="bottom">
                 <div id="year1" class="planning-slider">
                     <div class="sliderInfo">
@@ -1777,7 +1679,67 @@
                         <p><span id="valueYear1"></span>stp</p>
                     </div>
                     <div class="slidecontainer">
-                        <input type="range" min="0" max="60" value="43" class="slider" id="plan1">
+                        <input type="range" min="0" max="60" value="37" class="slider first" id="plan1">
+                    </div>
+                </div>
+
+                <div id="year2" class="planning-slider">
+                    <div class="sliderInfo">
+                        <span class="Title">Year 2</span>
+                        <p><span id="valueYear2"></span>stp</p>
+                    </div>
+                    <div class="slidecontainer">
+                        <input type="range" min="0" max="72" value="0" class="slider" id="plan2">
+                    </div>
+                </div>
+
+                <div id="year2sem1" class="planning-slider">
+                    <div class="sliderInfo">
+                        <span class="Title">Semester 1</span>
+                        <p><span id="valueYear2sem1"></span>stp</p>
+                    </div>
+                    <div class="slidecontainer">
+                        <input type="range" min="0" max="36" value="0" class="slider semester" id="plan2sem1">
+                    </div>
+                </div>
+
+                <div id="year2sem2" class="planning-slider">
+                    <div class="sliderInfo">
+                        <span class="Title">Semerster 2</span>
+                        <p><span id="valueYear2sem2"></span>stp</p>
+                    </div>
+                    <div class="slidecontainer">
+                        <input type="range" min="0" max="36" value="0" class="slider semester" id="plan2sem2">
+                    </div>
+                </div>
+
+                <div id="year3" class="planning-slider">
+                    <div class="sliderInfo">
+                        <span class="Title">Year 3</span>
+                        <p><span id="valueYear3"></span>stp</p>
+                    </div>
+                    <div class="slidecontainer_extra">
+                        <input type="range" min="0" max="72" value="0" class="slider" id="plan3">
+                    </div>
+                </div>
+
+                <div id="year4" class="planning-slider">
+                    <div class="sliderInfo">
+                        <span class="Title">Year 4</span>
+                        <p><span id="valueYear4"></span>stp</p>
+                    </div>
+                    <div class="slidecontainer_extra">
+                        <input type="range" min="0" max="72" value="0" class="slider" id="plan4">
+                    </div>
+                </div>
+
+                <div id="year5" class="planning-slider">
+                    <div class="sliderInfo">
+                        <span class="Title">Year 5</span>
+                        <p><span id="valueYear5"></span>stp</p>
+                    </div>
+                    <div class="slidecontainer">
+                        <input type="range" min="0" max="72" value="0" class="slider" id="plan5">
                     </div>
                 </div>
 
@@ -1832,6 +1794,8 @@
 <script src="js/compress.js"></script>
 <script src="js/zoom.js"></script>
 <script src="js/slider.js"></script>
+<script src="js/failedcourses.js"></script>
+
 
 
 
